# APIFarm

./: .gitignore  LICENSE  api.json  cli.py  client_sdk.py  keys.json  pyproject.toml  reproduce_issue.py  requirements.txt  server.py  setup.py  test_batch_chat.py  test_batch_messages.json  test_client.py  test_client_nologin.py  test_file_import.py  test_persistence_logout.py  test_system.py  test_system_nologin.py  users.json  walkthrough.md
api_farm/: __init__.py  __main__.py  cli.py  client_sdk.py  server.py
api_farm/prototype/: client_pool.py
doc/: README.md  add_api.md  chat_cli.md  walkthrough.md
test/: test_client.py  test_client_nologin.py  test_package.py  test_persistence_logout.py  test_system.py  test_system_nologin.py
